--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,8 @@ body {
   font-weight: 300;
   letter-spacing: 3px;
   line-height: 1.3;
-  cursor: none; }
+  cursor: none;
+  overflow: hidden; }
 
 #ball {
   position: absolute;
@@ -16,7 +17,35 @@ body {
   animation: colors 11s infinite;
   border-radius: 50%;
   pointer-events: none;
-  z-index: 10000; }
+  z-index: 10000;
+  opacity: 0.9; }
+
+.loading-screen {
+  position: absolute;
+  z-index: 800;
+  height: 100vh;
+  background: #252525;
+  width: 30%;
+  color: #fff;
+  font-weight: bold; }
+
+.loading-screen:nth-of-type(2) {
+  width: 70%;
+  left: 30%;
+  padding-left: 15%;
+  padding-top: 40vh; }
+
+.loading-dots {
+  animation-name: blink;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both; }
+
+.loading-dots:nth-of-type(2) {
+  animation-delay: 1s; }
+
+.loading-dots:nth-of-type(3) {
+  animation-delay: 2s; }
 
 .landing-holder {
   position: relative;
@@ -67,11 +96,11 @@ body {
     .title h3 span {
       margin-right: 50px; }
       .title h3 span:hover .triangle {
-        right: -40px; }
+        right: -35px; }
       .title h3 span:hover .triangle:nth-of-type(2) {
-        right: -25px; }
+        right: -20px; }
       .title h3 span:hover .triangle:nth-of-type(3) {
-        right: -10px; }
+        right: -5px; }
   .title h3:first-of-type {
     margin-top: 31%; }
     .title h3:first-of-type .triangle:first-of-type {
@@ -91,7 +120,8 @@ body {
   .title #name-svg {
     width: 120%;
     position: absolute;
-    right: 0%; }
+    right: 0%;
+    overflow: visible; }
     .title #name-svg .colored {
       opacity: 0.8; }
   .title .name {
@@ -735,3 +765,11 @@ body {
     fill: #008BFF; }
   100% {
     fill: #F7FF00; } }
+
+@keyframes blink {
+  0% {
+    opacity: .2; }
+  20% {
+    opacity: 1; }
+  100% {
+    opacity: .2; } }
