--- a/sass/main.sass
+++ b/sass/main.sass
@@ -16,6 +16,7 @@ body
   letter-spacing: 3px
   line-height: 1.3
   cursor: none
+  overflow: hidden
 
 #ball 
   position: absolute
@@ -25,6 +26,34 @@ body
   border-radius: 50%
   pointer-events: none
   z-index: 10000
+  opacity: 0.9
+
+.loading-screen
+  position: absolute
+  z-index: 800
+  height: 100vh
+  background: #252525
+  width: 30%
+  color: #fff
+  font-weight: bold
+
+.loading-screen:nth-of-type(2)
+  width: 70%
+  left: 30%
+  padding-left: 15%
+  padding-top: 40vh
+
+.loading-dots
+  animation-name: blink;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
+
+.loading-dots:nth-of-type(2)
+  animation-delay: 1s
+
+.loading-dots:nth-of-type(3)
+  animation-delay: 2s
 
 .landing-holder
   position: relative
@@ -76,11 +105,11 @@ body
       margin-right: 50px
       &:hover 
         .triangle
-          right: -40px
+          right: -35px
         .triangle:nth-of-type(2)
-          right: -25px
+          right: -20px
         .triangle:nth-of-type(3)
-          right: -10px
+          right: -5px
   h3:first-of-type
     margin-top: 31%
     .triangle:first-of-type
@@ -102,6 +131,7 @@ body
     width: 120%
     position: absolute
     right: 0%
+    overflow: visible
     .colored
       opacity: 0.8
 
@@ -231,4 +261,12 @@ body
     fill: $blue
   100%    
     fill: $yellow
+
+@keyframes blink 
+    0% 
+      opacity: .2;
+    20% 
+      opacity: 1;
+    100% 
+      opacity: .2;
 
