--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,8 @@ body {
   border-radius: 50%;
   pointer-events: none;
   z-index: 10000;
-  opacity: 0.9; }
+  opacity: 0.9;
+  /*************************************** LOADING SCREEN*/ }
 
 .loading-screen {
   position: absolute;
@@ -65,7 +66,8 @@ body {
   background: #F7FF00;
   animation: progressbar 15s linear;
   position: absolute;
-  display: inline-block; }
+  display: inline-block;
+  /*************************************** MAIN SCREEN*/ }
 
 .landing-holder {
   position: relative;
@@ -695,6 +697,83 @@ body {
     bottom: 0;
     -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
     clip-path: polygon(100% 0, 0% 100%, 100% 100%); }
+
+/*************************************** WORK SCREEN*/
+.work-screen {
+  position: absolute;
+  z-index: 800;
+  height: 100vh;
+  background: #fff;
+  width: 70%;
+  color: #676767;
+  font-weight: bold;
+  transform: translateX(-100%); }
+
+.work-screen.two {
+  width: 30%;
+  left: 70%;
+  transform: translateX(100%); }
+
+.work-text, .work-img {
+  display: none;
+  padding: 140px 40px; }
+
+.work-text.active, .work-img.active {
+  display: block; }
+
+.work-img {
+  position: relative; }
+  .work-img img {
+    width: 100%;
+    z-index: 1000; }
+  .work-img:before {
+    content: '';
+    width: 93%;
+    height: 70%;
+    clip-path: polygon(2% 100%, 0% 0%, 100% 5%);
+    animation: colors-three 11s infinite;
+    z-index: -1;
+    left: 20px;
+    top: 18%;
+    position: absolute; }
+  .work-img:after {
+    content: '';
+    width: 85%;
+    height: 42%;
+    clip-path: polygon(100% 0%, 0% 100%, 100% 75%);
+    animation: colors-five 11s infinite;
+    z-index: -1;
+    right: 20px;
+    top: 44%;
+    position: absolute; }
+
+.work-text {
+  line-height: 1.4;
+  padding: 100px 20px; }
+  .work-text h3 {
+    font-size: 2rem; }
+  .work-text ul li {
+    list-style: none;
+    margin-bottom: 12px;
+    position: relative; }
+    .work-text ul li:before {
+      content: '';
+      width: 10px;
+      height: 10px;
+      border-radius: 20px;
+      animation: colors-three 11s infinite;
+      position: absolute;
+      left: -26px;
+      top: 3px; }
+
+.work-text ul li:nth-of-type(2):before {
+  animation: colors-two 11s infinite; }
+
+.work-text ul li:nth-of-type(3):before {
+  animation: colors-six 11s infinite; }
+
+.work-text ul li:nth-of-type(4):before {
+  animation: colors-five 11s infinite; }
 
 @keyframes colors {
   0% {
