--- a/sass/main.sass
+++ b/sass/main.sass
@@ -28,6 +28,8 @@ body
   z-index: 10000
   opacity: 0.9
 
+  /*************************************** LOADING SCREEN*/
+
 .loading-screen
   position: absolute
   z-index: 800
@@ -74,6 +76,8 @@ body
   animation: progressbar 15s linear
   position: absolute
   display: inline-block
+
+  /*************************************** MAIN SCREEN*/
 
 .landing-holder
   position: relative
@@ -190,6 +194,87 @@ body
     bottom: 0
     -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%)
     clip-path: polygon(100% 0, 0% 100%, 100% 100%)
+
+
+/*************************************** WORK SCREEN*/
+
+.work-screen
+  position: absolute
+  z-index: 800
+  height: 100vh
+  background: #fff
+  width: 70%
+  color: #676767
+  font-weight: bold
+  transform: translateX(-100%)
+
+.work-screen.two
+  width: 30%
+  left: 70%
+  transform: translateX(100%)
+
+.work-text, .work-img
+  display: none
+  padding: 140px 40px
+
+.work-text.active, .work-img.active 
+  display: block
+
+.work-img
+  position: relative
+  img
+    width: 100%
+    z-index: 1000
+  &:before
+    content: '';
+    width: 93%;
+    height: 70%;
+    clip-path: polygon(2% 100%, 0% 0%, 100% 5%);
+    animation: colors-three 11s infinite;
+    z-index: -1;
+    left: 20px;
+    top: 18%;
+    position: absolute;
+  &:after
+    content: '';
+    width: 85%;
+    height: 42%;
+    clip-path: polygon(100% 0%, 0% 100%, 100% 75%);
+    animation: colors-five 11s infinite;
+    z-index: -1;
+    right: 20px;
+    top: 44%;
+    position: absolute;
+
+.work-text
+  line-height: 1.4
+  padding: 100px 20px
+  h3
+    font-size: 2rem
+  ul 
+    li
+      list-style: none
+      margin-bottom: 12px
+      position: relative
+      &:before
+        content: ''
+        width: 10px
+        height: 10px
+        border-radius: 20px
+        animation: colors-three $colorsAnimation
+        position: absolute
+        left: -26px
+        top: 3px
+      
+.work-text ul li:nth-of-type(2):before
+  animation: colors-two $colorsAnimation
+
+.work-text ul li:nth-of-type(3):before
+  animation: colors-six $colorsAnimation
+
+.work-text ul li:nth-of-type(4):before
+  animation: colors-five $colorsAnimation
+
 
 
 @keyframes colors 
